k8s: implement checker apis
