# api/swagger.yaml
@@ -281,6 +281,10 @@ paths:
           in: path
           type: string
           required: true
+        - name: body
+          in: body
+          schema:
+            $ref: '#/definitions/CheckDataRequest'
       produces:
         - application/json
         - text/plain
@@ -317,14 +321,9 @@ paths:
         '204':
           description: check cancelled
         '404':
-          description: data set not found
+          description: data set not found or check result unavailable
           schema:
             $ref: '#/definitions/ResponseMsg'
-        '410':
-          description: the check has already been cancelled
-          schema:
-            description: check result of the data set
-            type: string
         '500':
           description: server side error
           schema:
@@ -396,6 +395,13 @@ definitions:
         type: string
       dir:
         type: string
+  CheckDataRequest:
+    type: object
+    properties:
+      types:
+        type: array
+        items:
+          type: string
   UploadTask:
     type: object
     properties:
